[package]
name = "ifconfig"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
axum = { version = "0.5.15", features = ["headers"] }
clap = { version = "3.2.19", features = ["derive", "env"] }
dotenv = "0.15.0"
log = "0.4.17"
owasp-headers = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tower-default-headers = "0.1.1"
tower-http = { version = "0.3.4", features = ["trace", "cors", "compression-full", "request-id"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
