[package]
name = "ifconfig"
version = "1.0.0"
edition = "2021"
description = "Public IP address API"
license = "Apache-2.0"
repository = "https://github.com/jakewmeyer/ifconfig"
homepage = "https://github.com/jakewmeyer/ifconfig"

[dependencies]
anyhow = "1"
axum = { version = "0.5.16", features = ["headers"] }
clap = { version = "4.0.10", features = ["derive", "env"] }
dotenv = "0.15.0"
log = "0.4.17"
owasp-headers = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-default-headers = "0.1.1"
tower-http = { version = "0.3.4", features = ["trace", "cors", "compression-full", "request-id"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
