[package]
name = "ifconfig"
version = "1.0.0"
edition = "2021"
description = "Public IP address API"
license = "Apache-2.0"
repository = "https://github.com/jakewmeyer/ifconfig"
homepage = "https://github.com/jakewmeyer/ifconfig"

[dependencies]
anyhow = "1"
axum = { version = "0.8.4" }
clap = { version = "4.5.40", features = ["derive", "env"] }
dotenvy = "0.15.7"
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tower-default-headers = "0.2.0"
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-full", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
